--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -8,6 +8,12 @@
   .about h2 {
     font-size: 2.5rem;
     margin-bottom: 1rem;
+    border-radius: 25px; 
+    background-color: black;
+    color: white;
+    width: 500px;
+    margin: 0 auto 50px; /* Centers the heading horizontally */
+    padding: 10px; /* Adds padding inside the heading */
   }
   
   .about p {
