Revert "Path changes"
This reverts commit b559813eb6d809aee447f51928c3449c920331e2.

--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -1,6 +1,7 @@
 .contact-section {
     padding: 40px 20px;
     background-color: black;
+    background-image: url('/images/AboutUsImage.jpg');
     color: white
   }
   
