--- a/src/styles/RegistrationForm.css
+++ b/src/styles/RegistrationForm.css
@@ -79,7 +79,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: black;
     color: white;
     padding: 40px 60px;
     border-radius: 20px;  /* Rounder corners */
@@ -89,7 +89,7 @@
   }
   
   .popup button {
-    background-color: #ff5722;
+    background-color: black;
     color: white;
     border: none;
     padding: 10px 20px;
@@ -100,5 +100,6 @@
   }
   
   .popup button:hover {
-    background-color: #e64a19;
+    background-color: white;
+    color:white;
   }
