--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -4,6 +4,7 @@
   background-position: center; /* Centers the image */
   color: white; /* Makes the text stand out on a background image */
   text-align: center; 
+  width: 100%;
 }
 
 .about h2 {
