--- a/src/styles/Courses.css
+++ b/src/styles/Courses.css
@@ -5,6 +5,7 @@
   color: white; /* Makes the text stand out on a background image */
   text-align: center;
   height: 800px;
+  width: 100%;
 }
 
 .courses h2 {
