--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -10,6 +10,7 @@
   align-items: center; /* Align items vertically */
   position: relative;
   text-align: center; /* Center-align text for smaller screens */
+  box-sizing: border-box;
 }
 
 .footer p {
