--- a/src/styles/CourseCard.css
+++ b/src/styles/CourseCard.css
@@ -6,7 +6,7 @@
   margin-bottom: 30px; /* Add spacing between cards */
 }
 
-.course-card {
+.course-card1 {
   position: relative;
   width: 90%;
   height: 250px;
@@ -18,7 +18,7 @@
   margin-bottom: 10px;
 }
 
-.course-card:hover {
+.course-card1:hover {
   transform: scale(1.05); /* Scale up the card slightly */
 }
 
