--- a/src/styles/Modal.css
+++ b/src/styles/Modal.css
@@ -15,7 +15,7 @@
   background-color: black;
   padding: 20px;
   border-radius: 8px;
-  width: 400px;
+  height: 75%;
   text-align: center;
   overflow: hidden;
 }
