--- a/src/styles/Courses.css
+++ b/src/styles/Courses.css
@@ -5,7 +5,7 @@
   background-position: center;
   /* Centers the image */
   text-align: center;
-  height: 90vh;
+  height: fit-content;
 }
 
 .courses h2 {
@@ -84,7 +84,7 @@
 /* .carousel-button {
   width: 60px;
   /* Circle width */
-  height: 60px;
+  /* height: 60px; */
   /* Circle height */
   /* background-color: #53d4ad; */
   /* Bright blue background */
